[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-message-window"
version = "0.1.0"
description = "Sliding message window that preserves tool_use/tool_result pairs"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = []
keywords = ["agent", "llm", "messages", "window", "context", "tool"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.optional-dependencies]
# Tests use the standard library `unittest` and need no extra packages;
# these are only for linting/formatting and the optional pytest runner.
dev = ["pytest>=7", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_message_window"]
# Ship the PEP 561 marker so type checkers honour the inline annotations.
artifacts = ["src/agent_message_window/py.typed"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
